# simple_config

./: requirements.txt
airflow/: Makefile  README.md  pyproject.toml
dev_machine/: .aliases  .zshrc  README.md  setup.sh
